Trabalhando com NgOption e GroupBy

--- a/Aula 2/index.html
+++ b/Aula 2/index.html
@@ -46,6 +46,35 @@
 					}
 				];
 
+				$scope.operadoras = [
+					{
+						nome: "Oi",
+						codigo: 14,
+						categoria: "Celular"
+					},
+					{
+						nome: "Vivo",
+						codigo: 15,
+						categoria: "Celular"
+					},
+					{
+						nome: "Tim",
+						codigo: 41,
+						categoria: "Celular"
+					},
+					{
+						nome: "GVT",
+						codigo: 25,
+						categoria: "Fixo"
+					},
+					{
+						nome: "Embratel",
+						codigo: 21,
+						categoria: "Fixo"
+					},
+
+				];
+
 				$scope.adicionarContato = function(contato){
 					//console.log($scope.nome);
 					//console.log($scope.telefone);
@@ -59,27 +88,35 @@
 	</head>
 	<body ng-controller="listaTelefonicaCtrl">
 		<div class="jumbotron">
-			
+
 			<h4>{{app}}</h4>
 
 			<table class="table table-striped">
 				<tr>
 					<th>Nome</th>
 					<th>Telefone</th>
+					<th>Operadora</th>
 				</tr>
 				<tr ng-repeat="contato in contatos">
 					<td>{{contato.nome}}</td>
 					<td>{{contato.telefone}}</td>
+					<td>{{contato.operadora.nome}}</td>
 				</tr>
 			</table>
 			<hr/>
 
+			{{contato}}
 			<!-- NgModel vincula uma propriedade ao scope -->
 			<input class="form-control" type="name" ng-model="contato.nome" placeholder="Nome" />
 			<input class="form-control" type="telefone" ng-model="contato.telefone" placeholder="Telefone" />
 
+			<!-- Utilizando NgOptions e Group By -->
+			<select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome group by operadora.categoria for operadora in operadoras">
+				<option value="">Selecione uma operadora</option>
+			</select>
+
 			<!-- NgClick atribuindo comportamento ao evento -->
-			<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)">Adicionar Contato</button>
+			<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="!contato.nome || !contato.telefone">Adicionar Contato</button>
 
 			</table>
 		</div>
