--- a/Aula 3/index.html
+++ b/Aula 3/index.html
@@ -151,11 +151,17 @@
 				<!-- Usando $pristine e $dirty -->
 
 				<!-- NgModel vincula uma propriedade ao scope -->
-				<input class="form-control" type="name" ng-model="contato.nome" name="nome" placeholder="Nome" ng-required="true"/>
-				<div ng-show="contatoForm.nome.$invalid && contatoForm.nome.$dirty" class="alert alert-danger">Por favor, preencha o campo Nome!</div>
+				<input class="form-control" type="name" ng-model="contato.nome" name="nome" placeholder="Nome" ng-required="true" ng-minlength="4" />
 
-				<input class="form-control" type="telefone" ng-model="contato.telefone" name="telefone" placeholder="Telefone" ng-required="true"/>
-				<div ng-show="contatoForm.telefone.$invalid && contatoForm.telefone.$dirty" class="alert alert-danger">Por favor, preencha o campo Telefone!</div>
+				<!-- Usando $error -->
+				<div ng-show="contatoForm.nome.$error.required && contatoForm.nome.$dirty" class="alert alert-danger">Por favor, preencha o campo Nome!</div>
+				<div ng-show="contatoForm.nome.$error.minlength" class="alert alert-danger">O Nome deve ter pelo menos 4 caracteres!</div>
+
+				<!-- Usando NgMinLength -->
+				<!-- Usando ngPattern -->
+				<input class="form-control" type="telefone" ng-model="contato.telefone" name="telefone" placeholder="Telefone" ng-required="true" ng-minlength="10" ng-pattern="/^\d{2}-\d{4,5}-\d{4}$/"/>
+				<div ng-show="contatoForm.telefone.$error.required && contatoForm.telefone.$dirty" class="alert alert-danger">Por favor, preencha o campo Telefone!</div>
+				<div ng-show="contatoForm.telefone.$error.pattern  && contatoForm.telefone.$dirty" class="alert alert-danger">O Telefone deve ter o formato DD-DDDDD-DDDD</div>
 
 				<!-- Utilizando NgOptions e Group By -->
 				<select class="form-control" ng-model="contato.operadora" ng-required="true" name="operadora" ng-options="operadora.nome group by operadora.categoria for operadora in operadoras">
