--- a/Aula 4/index.html
+++ b/Aula 4/index.html
@@ -7,84 +7,106 @@
 		<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.css"/>
 
 		<style>
-			.jumbotron{
-				width: 500px;
+			.jumbotron {
+				width: 600px;
 				text-align: center;
 				margin-top: 20px;
 				margin-left: auto;
 				margin-right: auto;
 			}
-
-			.table{
+			h3 {
+				margin-bottom: 30px;
+			}
+			.table {
 				margin-top: 20px;
 			}
-
-			.form-control{
+			.form-control {
 				margin-bottom: 5px;
 			}
-
-			.selecionado{
+			.selecionado {
 				background-color: yellow;
 			}
-
-			.negrito{
+			.negrito {
 				font-weight: bold;
+			}
+			hr {
+				border-color: #999;
 			}
 		</style>
 
 		<script src="lib/angular/angular.js"></script>
+		<script src="lib/angular/angular-locale_pt-br.js"></script>
 		<script src="lib/angular/angular-messages.js"></script>
 		<script>
 			
 			angular.module("listaTelefonica", ["ngMessages"]);
 
-			angular.module("listaTelefonica").controller("listaTelefonicaCtrl", function ($scope){
+			angular.module("listaTelefonica").controller("listaTelefonicaCtrl", function ($scope, uppercaseFilter){
 				$scope.app = "Lista Telefônica";
 				$scope.contatos = [
 					{
-						nome: "Maria",
-						telefone: "42912345678",
-						cor: "yellow"
+						nome: uppercaseFilter("Pedro"), 
+						telefone: "9999-8888", 
+						data: new Date(), 
+						operadora: 
+						{
+							nome: "Oi", 
+							codigo: 14, 
+							categoria: "Celular"
+						}
 					},
 					{
-						nome: "Joao",
-						telefone: "42987654321",
-						cor: "blue"
-					},
+						nome: "Ana", 
+						telefone: "9999-8877", 
+						data: new Date(), 
+						operadora: 
+						{
+							nome: "Vivo", 
+							codigo: 15, 
+							categoria: "Celular"}
+						},
 					{
-						nome: "Pedro",
-						telefone: "42912348765",
-						cor: "green"
-					}
+						nome: "Maria", 
+						telefone: "9999-8866", 
+						data: new Date(), 
+						operadora: {
+							nome: "Tim", 
+							codigo: 41, 
+							categoria: "Celular"}
+						}
 				];
 
 				$scope.operadoras = [
 					{
-						nome: "Oi",
-						codigo: 14,
-						categoria: "Celular"
+						nome: "Oi", 
+						codigo: 14, 
+						categoria: "Celular", 
+						preco: 2
 					},
 					{
-						nome: "Vivo",
-						codigo: 15,
-						categoria: "Celular"
+						nome: "Vivo", 
+						codigo: 15, 
+						categoria: "Celular", 
+						preco: 1
 					},
 					{
-						nome: "Tim",
-						codigo: 41,
-						categoria: "Celular"
+						nome: "Tim", 
+						codigo: 41, 
+						categoria: "Celular", 
+						preco: 3
 					},
 					{
-						nome: "GVT",
-						codigo: 25,
-						categoria: "Fixo"
+						nome: "GVT", 
+						codigo: 25, 
+						categoria: "Fixo", 
+						preco: 1
 					},
 					{
-						nome: "Embratel",
-						codigo: 21,
-						categoria: "Fixo"
-					},
-
+						nome: "Embratel", 
+						codigo: 21, 
+						categoria: "Fixo", 
+						preco: 2
+					}
 				];
 
 				$scope.adicionarContato = function (contato) {
@@ -113,6 +135,11 @@
 					});
 				};
 
+				$scope.ordenarPor = function (campo){
+					$scope.criterioDeOrdenacao = campo;
+					$scope.direcaoDeOrdenacao = !$scope.direcaoDeOrdenacao;
+				}
+
 				//Aplicando estiles com NgClass
 				$scope.classe1 = "selecionado";
 				$scope.classe2 = "negrito";
@@ -125,25 +152,24 @@
 		<div class="jumbotron">
 
 			<h4>{{app}}</h4>
-
+			<input class="form-control" type="text" ng-model="criterioDeBusca" placeholder="Digite o que precisa?">
 			<table class="table" ng-show="contatos.length > 0">
 				<tr>
 					<th></th>
-					<th>Nome</th>
-					<th>Telefone</th>
+					<th><a href="" ng-click="ordenarPor('nome')">Nome</a></th>
+					<th><a href="" ng-click="ordenarPor('telefone')">Telefone</a></th>
 					<th>Operadora</th>
-					<th></th>
+					<th>Data</th>
 				</tr>
 				<!-- Aplicando estilos com NgClass -->
 				<!--tr ng-class="[classe1, classe2]" ng-repeat="contato in contatos"-->
-				<tr ng-class="{'selecionado negrito': contato.selecionado}"  ng-repeat="contato in contatos">
+				<!-- tr ng-class="{'selecionado negrito': contato.selecionado}"  ng-repeat="contato in contatos | filter:{nome: criterioDeBusca}"-->
+				<tr ng-class="{'selecionado negrito': contato.selecionado}"  ng-repeat="contato in contatos | filter:criterioDeBusca | orderBy:criterioDeOrdenacao:direcaoDeOrdenacao">
 					<td><input type="checkbox" ng-model="contato.selecionado"/></td>
-					<td>{{contato.nome}}</td>
+					<td>{{contato.nome | uppercase}}</td>
 					<td>{{contato.telefone}}</td>
-					<td>{{contato.operadora.nome}}</td>
-					<td>
-						<!-- NgStyle --> 
-						<div style="width: 25px; height: 25px;" ng-style="{'background-color': contato.cor}"> </div> </td>
+					<td>{{contato.operadora.nome | lowercase}}</td>
+					<td>{{contato.data | date:'dd/MM/yyyy HH:mm'}}</td>
 				</tr>
 			</table>
 			<hr/>
@@ -155,7 +181,7 @@
 				<input class="form-control" type="name" ng-model="contato.nome" name="nome" placeholder="Nome" ng-required="true" ng-minlength="4" />
 
 				<!-- Usando $error e $ng-message -->
-				<div ng-messages="contatoForm.$error.nome" class="alert alert-danger">
+				<div ng-show="contatoForm.nome.$dirty" ng-messages="contatoForm.$error.nome" class="alert alert-danger">
 					<div ng-message="required">Por favor, preencha o campo Nome!</div>
 					<div ng-message="minlength">O Nome deve ter pelo menos 4 caracteres!</div>
 				</div>
@@ -166,14 +192,14 @@
 				<input class="form-control" type="telefone" ng-model="contato.telefone" name="telefone" placeholder="Telefone" ng-required="true" ng-minlength="10" ng-pattern="/^\d{2}-\d{4,5}-\d{4}$/"/>
 
 				<!-- Usando $error e $ng-message -->
-				<div ng-messages="contatoForm.$error.telefone" class="alert alert-danger">
-					<div ng-messages="required">Por favor, preencha o campo Telefone!</div>
-					<div ng-messages="pattern">O Telefone deve ter o formato DD-DDDDD-DDDD</div>
+				<div ng-show="contatoForm.telefone.$dirty" ng-messages="contatoForm.$error.telefone" class="alert alert-danger">
+					<div ng-message="required">Por favor, preencha o campo Telefone!</div>
+					<div ng-message="pattern">O Telefone deve ter o formato DD-DDDDD-DDDD</div>
 				</div>
 				
 
 				<!-- Utilizando NgOptions e Group By -->
-				<select class="form-control" ng-model="contato.operadora" ng-required="true" name="operadora" ng-options="operadora.nome group by operadora.categoria for operadora in operadoras">
+				<select class="form-control" ng-model="contato.operadora" ng-required="true" name="operadora" ng-options="operadora.nome + ' (' + (operadora.preco | currency) + ') ' group by operadora.categoria for operadora in operadoras | orderBy:'nome'">
 					<option value="">Selecione uma operadora</option>
 				</select>
 				<div ng-show="contatoForm.operadora.$invalid && contatoForm.operadora.$dirty" class="alert alert-danger">Por favor, escolha a Operadora!</div>
