Atuaização de Rodapé

--- a/Aula 4/index.html
+++ b/Aula 4/index.html
@@ -215,7 +215,7 @@
 		<!-- Não funcionou no Chrome nem no Firefox -->
 		<!-- ng-include src="'footer.html'"></ng-include -->
 		<div style="text-align: center; padding-bottom: 20px">
-			Criado por Oséias Magalhães
+			Criado por Oséias Magalhães - 1990
 		</div>
 
 	</body>
