--- a/Aula 5/index.html
+++ b/Aula 5/index.html
@@ -41,56 +41,36 @@
 			
 			angular.module("listaTelefonica", ["ngMessages"]);
 
-			angular.module("listaTelefonica").controller("listaTelefonicaCtrl", function ($scope, $http, uppercaseFilter){
+			angular.module("listaTelefonica").controller("listaTelefonicaCtrl", function ($scope, $http){
 				$scope.app = "Lista Telefônica";
 				$scope.contatos = [];
+				$scope.operadoras = [];
 
-				$scope.operadoras = [
-					{
-						nome: "Oi", 
-						codigo: 14, 
-						categoria: "Celular", 
-						preco: 2
-					},
-					{
-						nome: "Vivo", 
-						codigo: 15, 
-						categoria: "Celular", 
-						preco: 1
-					},
-					{
-						nome: "Tim", 
-						codigo: 41, 
-						categoria: "Celular", 
-						preco: 3
-					},
-					{
-						nome: "GVT", 
-						codigo: 25, 
-						categoria: "Fixo", 
-						preco: 1
-					},
-					{
-						nome: "Embratel", 
-						codigo: 21, 
-						categoria: "Fixo", 
-						preco: 2
-					}
-				];
-
-				var carregarContatos = function() {
-					$http.get("http://localhost:3412/contatos").success(function(data, status){
-						scope.contato = data;
+				var carregarContatos = function () {
+					$http.get("http://localhost:3000/contatos").then(function (response) {
+						$scope.contatos = response.data;
+					}).catch(function (error) {
+						console.error('Erro ao carregar contatos:', error);
 					});
-				}
+				};
+
+				var carregarOperadoras = function () {
+					$http.get("http://localhost:3000/operadoras").then(function (response) {
+						$scope.operadoras = response.data;
+					}).catch(function (error) {
+						console.error('Erro ao carregar operadoras:', error);
+					});
+				};
 
 				$scope.adicionarContato = function (contato) {
-					//console.log($scope.nome);
-					//console.log($scope.telefone);
-					$scope.contato.cor = "yellow";
-					$scope.contatos.push(angular.copy(contato));
-					delete $scope.contato;
-					$scope.contatoForm.$setPristine();
+					contato.data = new Date();
+					$http.post("http://localhost:3000/contatos", contato).then(function (response) {
+						delete $scope.contato;
+						$scope.contatoForm.$setPristine();
+						carregarContatos();
+					}).catch(function (error) {
+						console.error('Erro ao carregar contatos:', error);
+					});
 				};
 
 				$scope.apagarContatos = function (contatos) {
@@ -115,12 +95,12 @@
 					$scope.direcaoDeOrdenacao = !$scope.direcaoDeOrdenacao;
 				}
 
-				//Aplicando estiles com NgClass
+				carregarContatos();
+				carregarOperadoras();
+
+				//Aplicando estilos com NgClass
 				$scope.classe1 = "selecionado";
 				$scope.classe2 = "negrito";
-
-				carregarContatos();
-
 			});
 
 		</script>
@@ -129,7 +109,7 @@
 	<body ng-controller="listaTelefonicaCtrl">
 		<div class="jumbotron">
 
-			<h4>{{app}}</h4>
+			<h3>{{app}}</h3>
 			<input class="form-control" type="text" ng-model="criterioDeBusca" placeholder="Digite o que precisa?">
 			<table class="table" ng-show="contatos.length > 0">
 				<tr>
@@ -152,42 +132,38 @@
 			</table>
 			<hr/>
 			<!-- Validando Formulários -->
-			<form name="contatoForm"> 
-				<!-- Usando $pristine e $dirty -->
-
-				<!-- NgModel vincula uma propriedade ao scope -->
-				<input class="form-control" type="name" ng-model="contato.nome" name="nome" placeholder="Nome" ng-required="true" ng-minlength="4" />
-
-				<!-- Usando $error e $ng-message -->
-				<div ng-show="contatoForm.nome.$dirty" ng-messages="contatoForm.$error.nome" class="alert alert-danger">
-					<div ng-message="required">Por favor, preencha o campo Nome!</div>
-					<div ng-message="minlength">O Nome deve ter pelo menos 4 caracteres!</div>
-				</div>
-				
-
-				<!-- Usando NgMinLength -->
-				<!-- Usando ngPattern -->
-				<input class="form-control" type="telefone" ng-model="contato.telefone" name="telefone" placeholder="Telefone" ng-required="true" ng-minlength="10" ng-pattern="/^\d{2}-\d{4,5}-\d{4}$/"/>
-
-				<!-- Usando $error e $ng-message -->
-				<div ng-show="contatoForm.telefone.$dirty" ng-messages="contatoForm.$error.telefone" class="alert alert-danger">
-					<div ng-message="required">Por favor, preencha o campo Telefone!</div>
-					<div ng-message="pattern">O Telefone deve ter o formato DD-DDDDD-DDDD</div>
-				</div>
-				
-
-				<!-- Utilizando NgOptions e Group By -->
-				<!-- Filtro para arredondamento numérico {{100 | number}} -->
-				<select class="form-control" ng-model="contato.operadora" ng-required="true" name="operadora" ng-options="operadora.nome + ' (' + (operadora.preco | currency) + ') ' group by operadora.categoria for operadora in operadoras | orderBy:'nome'">
+			<form name="contatoForm">
+				<input class="form-control" type="text" ng-model="contato.nome" name="nome" placeholder="Nome" ng-required="true"
+					ng-minlength="10" />
+				<input class="form-control" type="text" ng-model="contato.telefone" name="telefone" placeholder="Telefone"
+					ng-required="true" ng-pattern="/^\d{4,5}-\d{4}$/" />
+				<select class="form-control" ng-model="contato.operadora"
+					ng-options="operadora.nome + ' ( ' + (operadora.preco | currency) + ' )' for operadora in operadoras | orderBy:'nome'">
 					<option value="">Selecione uma operadora</option>
 				</select>
-				<div ng-show="contatoForm.operadora.$invalid && contatoForm.operadora.$dirty" class="alert alert-danger">Por favor, escolha a Operadora!</div>
-
 			</form>
 
+			<div ng-show="contatoForm.nome.$dirty" ng-messages="contatoForm.nome.$error">
+				<div ng-message="required" class="alert alert-danger">
+					Por favor, preencha o campo nome!
+				</div>
+				<div ng-message="minlength" class="alert alert-danger">
+					O campo nome deve ter no mínimo 10 caracteres.
+				</div>
+			</div>
+			
+			<div ng-show="contatoForm.telefone.$error.required && contatoForm.telefone.$dirty" class="alert alert-danger">
+				Por favor, preencha o campo telefone!
+			</div>
+			<div ng-show="contatoForm.telefone.$error.pattern" class="alert alert-danger">
+				O campo telefone deve ter o formato DDDDD-DDDD.
+			</div>
+
 			<!-- NgClick atribuindo comportamento ao evento -->
-			<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="contatoForm.$invalid">Adicionar Contato</button>
-			<button class="btn btn-danger btn-block" ng-click="apagarContatos(contatos)" ng-if="isContatoSelecionados(contatos)">Apagar Contatos</button>
+			<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)"
+				ng-disabled="contatoForm.$invalid">Adicionar Contato</button>
+			<button class="btn btn-danger btn-block" ng-click="apagarContatos(contatos)"
+				ng-if="isContatoSelecionado(contatos)">Apagar Contatos</button>
 		</div>
 
 		<!-- Não funcionou no Chrome nem no Firefox -->
